// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feature /> renders the <Feature /> with a just a subtitle 1`] = `
<div
  class="feature__Container-sc-6swrp6-0 isjLws"
>
  <h2
    class="feature__SubTitle-sc-6swrp6-2 bONLfr"
  >
    Watch anywhere. Cancel anytime.
  </h2>
</div>
`;

exports[`<Feature /> renders the <Feature /> with a just a title 1`] = `
<div
  class="feature__Container-sc-6swrp6-0 isjLws"
>
  <h1
    class="feature__Title-sc-6swrp6-1 biQKvD"
  >
    Unlimited movies, TV shows, and more.
  </h1>
</div>
`;
